--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.2",
+    "@actions/exec": "^1.0.3",
     "@actions/http-client": "^1.0.6",
     "@actions/tool-cache": "^1.3.1",
     "semver": "^6.1.1"
